--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ APP_SECRET=bootcampmeetappserver
 DB_HOST=localhost
 DB_USER=postgres
 DB_PASS=docker
-DB_NAME=bootcamp-meetapp
+DB_NAME=bootcampmeetapp
 
 # Mongo
 
