--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "bootcamp-challenge-server",
+  "name": "bootcamp-meetapp-server",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "git@github.com:guilhermerodz/bootcamp-challenge-server.git",
+  "repository": "git@github.com:guilhermerodz/bootcamp-meetapp-server.git",
   "author": "guilhermerodz <guilherme.rodrigues.profissional@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.0.0-beta.2",
     "dotenv": "^8.0.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
