--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "guilhermerodz <guilherme.rodrigues.profissional@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "queue": "nodemon src/queue.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.2.2",
     "cors": "^2.8.5",
     "date-fns": "^2.0.0-beta.2",
     "dotenv": "^8.0.0",
