--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.7",
     "multer": "^1.4.1",
     "nodemailer": "^6.2.1",
     "nodemailer-express-handlebars": "^3.0.0",
